Use fieldalignment instead of maligned

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -19,7 +19,7 @@ linters:
     - gocyclo
     - misspell
     - bodyclose
-    - maligned
+    - fieldalignment
   disable:
     - errcheck
   disable-all: false
