--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,7 +1,5 @@
 run:
   skip-dirs:
-    - docs_src
-    - docs
     - .github
 
 linters-settings:
@@ -11,6 +9,11 @@ linters-settings:
     simplify: true
   misspell:
     locale: US
+  govet:
+    disable:
+      - shadow
+      - nilness
+    enable-all: true
 
 linters:
   enable:
@@ -19,7 +22,7 @@ linters:
     - gocyclo
     - misspell
     - bodyclose
-    - fieldalignment
+    - govet
   disable:
     - errcheck
   disable-all: false
@@ -27,3 +30,5 @@ linters:
 
 issues:
   exclude-use-default: false
+  max-issues-per-linter: 0
+  max-same-issues: 0
