--- a/.golangci.yml
+++ b/.golangci.yml
@@ -18,13 +18,12 @@ linters-settings:
 linters:
   enable:
     - gofmt
-    - golint
+    - revive
     - gocyclo
     - misspell
     - bodyclose
     - govet
-    - deadcode
-  disable:
+    - unused
     - errcheck
   disable-all: false
   fast: false
@@ -33,3 +32,9 @@ issues:
   exclude-use-default: false
   max-issues-per-linter: 0
   max-same-issues: 0
+  exclude:
+    - should have a package comment
+  exclude-rules:
+    - path: _test\.go
+      linters:
+        - gocyclo
