--- a/.golangci.yml
+++ b/.golangci.yml
@@ -31,6 +31,8 @@ linters:
             - ["DTO"] # DenyList
         - name: unused-parameter
           disabled: false
+        - name: use-any
+          disabled: false
     testifylint:
       disable:
         - require-error
